--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name" : "hypejunction/hypediscovery",
+	"name" : "hypeJunction/hypeDiscovery",
 	"description" : "Enhanced social presence and discovery of Elgg content in the social eco-system.",
 	"homepage" : "http://hypejunction.com",
 	"keywords" : [ "open graph", "twitter cards", "facebook", "oembed", "discovery" ],
@@ -10,6 +10,7 @@
 			"email": "ismayil.khayredinov@gmail.com"
 		}
 	],
+	"license" : "GNU GPL 2",
 	"require": {
 		"composer/installers": ">=1.0.8"
 	}
